# zephyr

./: CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  west.yml
arch/posix/core/: swap.c
arch/x86/: CMakeLists.txt  Kconfig
arch/x86/core/: crt0.S  excstub.S  intstub.S  userspace.S
boards/arm/nrf51_pca10028/: nrf51_pca10028.dts
boards/arm/nrf51_pca10031/: nrf51_pca10031.dts
boards/arm/nrf52810_pca10040/: nrf52810_pca10040.dts
boards/arm/nrf52811_pca10056/: nrf52811_pca10056.dts
boards/arm/nrf52832_mdk/: nrf52832_mdk.dts
boards/arm/nrf52833_pca10100/: nrf52833_pca10100.dts
boards/arm/nrf52840_blip/: nrf52840_blip.dts
boards/arm/nrf52840_mdk/: nrf52840_mdk.dts
boards/arm/nrf52840_papyr/: nrf52840_papyr.dts
boards/arm/nrf52840_pca10056/: nrf52840_pca10056.dts
boards/arm/nrf52840_pca10090/: nrf52840_pca10090.dts
boards/arm/nrf52_adafruit_feather/: nrf52_adafruit_feather.dts
boards/arm/nrf52_blenano2/: nrf52_blenano2.dts
boards/arm/nrf52_pca10040/: nrf52_pca10040.dts
boards/arm/nrf52_pca20020/: nrf52_pca20020.dts
boards/arm/nrf52_sparkfun/: nrf52_sparkfun.dts
boards/arm/nrf5340_dk_nrf5340/: nrf5340_dk_nrf5340_cpuapp_common.dts  nrf5340_dk_nrf5340_cpuapp_partition_conf.dts  nrf5340_dk_nrf5340_cpunet.dts
boards/arm/nrf9160_pca10090/: nrf9160_pca10090_common.dts  nrf9160_pca10090_partition_conf.dts
boards/posix/native_posix/: irq_handler.c
boards/posix/nrf52_bsim/: irq_handler.c
cmake/: extensions.cmake  kconfig.cmake  zephyr_module.cmake
cmake/app/: boilerplate.cmake
cmake/bintools/gnu/: target_memusage.cmake
cmake/bintools/llvm/: target.cmake
cmake/compiler/clang/: target.cmake  target_warnings.cmake
cmake/compiler/gcc/: target.cmake  target_arm.cmake
cmake/compiler/host-gcc/: target.cmake
cmake/compiler/xcc/: target.cmake
cmake/flash/: CMakeLists.txt
cmake/linker/ld/: target.cmake  target_base.cmake
cmake/toolchain/llvm/: Kconfig  generic.cmake
doc/: CMakeLists.txt
doc/application/: index.rst
doc/getting_started/: index.rst
doc/reference/: overview.rst
doc/reference/storage/: index.rst
doc/reference/storage/flash_buffered_write/: flash_buffered_write.rst
drivers/ethernet/: eth_sam_gmac.c
drivers/flash/: Kconfig
drivers/i2c/: i2c_dw.c
drivers/timer/: arcv2_timer0.c  cortex_m_systick.c  hpet.c  nrf_rtc_timer.c  riscv_machine_timer.c  sam0_rtc_timer.c  xtensa_sys_timer.c
drivers/usb/device/: usb_dc_nrfx.c
ext/lib/encoding/tinycbor/: CMakeLists.txt
include/: power.h  stdout_hook.h
include/app_memory/: app_memdomain.h
include/arch/arc/: arch.h
include/arch/arm/: arch.h
include/arch/x86/: asm.h
include/bluetooth/: gatt.h
include/dfu/: flash_img.h
include/linker/: linker-defs.h
include/misc/: util.h
include/net/: gptp.h  ieee802154_radio.h  lldp.h  mii.h  net_core.h  net_ip.h  net_l2.h  udp.h
include/shell/: shell.h
include/storage/: fbw.h  fsw.h  stream_flash.h  stream_writer.h
include/sys/: __assert.h  libc-hooks.h
include/toolchain/: zephyr_stdint.h
kernel/: Kconfig  init.c  pipes.c  timeout.c
lib/: CMakeLists.txt  Kconfig
lib/libc/: Kconfig
lib/libc/minimal/include/: stdint.h  stdlib.h
lib/libc/newlib/: CMakeLists.txt  libc-hooks.c
lib/low_level_c_runtime_library/: CMakeLists.txt  Kconfig  __assert.c  __vfprintf_helpers.c  fcntl.h  gcc_builtins.c  stdout_console.c
lib/os/: CMakeLists.txt  ring_buffer.c  stdout_hook_install.c
samples/basic/blinky/: sample.yaml
samples/basic/button/: sample.yaml
samples/basic/disco/: sample.yaml
samples/basic/rgb_led/: sample.yaml
samples/bluetooth/central_peripheral/: CMakeLists.txt
samples/bluetooth/central_peripheral/_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
samples/bluetooth/central_peripheral/src/: dss.c  main.c
samples/bluetooth/gatt/: dss.c  dss.h
samples/mcuboot/: README.rst
samples/net/nats/src/: nats.c
scripts/: gen_kobject_list.py  parse_syscalls.py  partition_manager.py  sanitycheck
soc/riscv32/openisa_rv32m1/: linker.ld
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/controller/ll_sw/: ctrl.c  ull_conn.c  ull_master.c  ull_slave.c
subsys/bluetooth/host/: gatt.c  hci_core.c
subsys/bluetooth/host/mesh/: prov.c  proxy.c
subsys/bluetooth/shell/: bt.c  gatt.c  l2cap.c  rfcomm.c
subsys/dfu/: Kconfig
subsys/dfu/img_util/: flash_img.c  flash_img.c.orig
subsys/fs/: shell.c
subsys/fs/nvs/: nvs.c
subsys/logging/: log_backend_rtt.c  log_core.c  log_msg.c  log_output.c
subsys/net/ip/: dhcpv4.c  net_pkt.c  tcp.c  utils.c
subsys/net/lib/sockets/: sockets.c  (+1 more)
subsys/settings/src/: settings.c  settings_line.c  settings_store.c
subsys/shell/: shell.c
subsys/storage/: CMakeLists.txt  Kconfig
subsys/storage/flash_buffered_write/: Kconfig  fbw.c
subsys/storage/flash_map/: flash_map_default.c
subsys/storage/flash_stream_write/: Kconfig  fsw.c  stream_writer.c
subsys/storage/stream/: CMakeLists.txt  CMakeLists.txt.orig  Kconfig  stream.c  stream_flash.c
subsys/usb/class/: usb_dfu.c
(+82 files in other folders)
